--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,30 @@ extends layout
 
 block content
 
-  h1 Send a test message
+  h2 The mode state is: #{global_mode}
+  h4 The brightness is: #{global_brightness}
 
-  h2 The last message sent was: #{last_message}
+  h2 Change Sign Mode
 
-  form(method='POST' action='/lightmessage')
-    div.input
-      textarea(name="message", cols="40", rows="5")
+  form(method='POST' action='/modeChange')
     div.actions
-      input(type="submit", value="TEST")
+      input(type="submit", value="Clock", name="ModeChangeButton")
+      input(type="submit", value="Weather", name="ModeChangeButton")
+      input(type="submit", value="Morning", name="ModeChangeButton")
+      input(type="submit", value="Off", name="ModeChangeButton")
+
+  h2 Change Sign Brightness
+
+  form(method='POST' action='/brightnessChange')
+    div.actions
+      input(type="submit", value="Min", name="BrightnessChangeButton")
+      input(type="submit", value="--", name="BrightnessChangeButton")
+      input(type="submit", value="-", name="BrightnessChangeButton")
+      input(type="submit", value="+", name="BrightnessChangeButton")
+      input(type="submit", value="++", name="BrightnessChangeButton")
+      input(type="submit", value="Max", name="BrightnessChangeButton")
+
+  form(method='POST' action='/brightnessChange')
+    div.actions
+      input(type="range", name="BrightnessSlider" min="0" max="100" step="1" value=global_brightness)
+      input(type="submit", value="Submit Slider", name="SliderSubmitButton")
