--- a/views/index.pug
+++ b/views/index.pug
@@ -33,3 +33,19 @@ block content
     div.actions
       input(type="range", name="BrightnessSlider" min="0" max="100" step="1" value=global_brightness)
       input(type="submit", value="Submit Slider", name="SliderSubmitButton")
+  
+  h2 Send sign message
+
+  form(method='POST' action='/lightmessage')
+    div.actions
+      p
+        | Message
+        input(type="text", name="message")
+        | Loops
+        select(type="select", name="loop")
+          option(value=1) #{1}
+          option(value=2) #{2}
+          option(value=3) #{3}
+          option(value=4) #{4}
+          option(value=5) #{5}
+        input(type="submit", value="Submit")
