--- a/views/index.pug
+++ b/views/index.pug
@@ -16,27 +16,27 @@ block content
     div.actions
       | busPIDMode
       input(type="checkbox", name="busPIDMode", checked=global_mode_obj.busPIDMode)
-    div.actions
-      | tick enabled
-      input(type="checkbox", name="tick", checked=global_mode_obj.tick.enabled)
-    div.actions
-      | tick clock
-      input(type="checkbox", name="tickClock", checked=global_mode_obj.tick.clock)
-    div.actions
-      | tick UtcClock
-      input(type="checkbox", name="tickUtcClock", checked=global_mode_obj.tick.UtcClock)
-    div.actions
-      | tick temp
-      input(type="checkbox", name="ticktemp", checked=global_mode_obj.tick.temp)
-    div.actions
-      | tick weather temp
-      input(type="checkbox", name="tickWeatherTemp", checked=global_mode_obj.tick.weather.temp)
-    div.actions
-      | tick weather conditions
-      input(type="checkbox", name="tickWeatherConditions", checked=global_mode_obj.tick.weather.conditions)
-    div.actions
-      | tick lux
-      input(type="checkbox", name="tickLux", checked=global_mode_obj.tick.lux)
+    //- div.actions
+    //-   | tick enabled
+    //-   input(type="checkbox", name="tick", checked=global_mode_obj.tick.enabled)
+    //- div.actions
+    //-   | tick clock
+    //-   input(type="checkbox", name="tickClock", checked=global_mode_obj.tick.clock)
+    //- div.actions
+    //-   | tick UtcClock
+    //-   input(type="checkbox", name="tickUtcClock", checked=global_mode_obj.tick.UtcClock)
+    //- div.actions
+    //-   | tick temp
+    //-   input(type="checkbox", name="ticktemp", checked=global_mode_obj.tick.temp)
+    //- div.actions
+    //-   | tick weather temp
+    //-   input(type="checkbox", name="tickWeatherTemp", checked=global_mode_obj.tick.weather.temp)
+    //- div.actions
+    //-   | tick weather conditions
+    //-   input(type="checkbox", name="tickWeatherConditions", checked=global_mode_obj.tick.weather.conditions)
+    //- div.actions
+    //-   | tick lux
+    //-   input(type="checkbox", name="tickLux", checked=global_mode_obj.tick.lux)
     div.actions
       input(type="submit", value="submit", name="submit")
 
